--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  margin-bottom: 16px;
 }
 
 .navbar-lewagon .navbar-collapse {
