--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,15 @@
-<p><%= link_to 'Back to lists', lists_path %></p>
+<p><%= link_to 'Back to lists', lists_path %> | <%= link_to 'Add a bookmark', new_list_bookmark_path(@list) %></p>
 <h1><%= @list.name %>:</h1>
 <ul>
   <% @list.bookmarks.each do |bookmark| %>
   <li><%= bookmark.movie.title %>
     <p><%= bookmark.comment %></p>
+    <p>
+      <%= link_to "Delete",
+      bookmark_path(bookmark),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+      %>
+    </p>
   </li>
   <% end %>
 </ul>
