Tweaked the colours of links and buttons.

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,10 +12,10 @@ $font-size-base:         1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $red;
 $success:    $green;
 $info:       $yellow;
-$danger:     $red;
+$danger:     $blue;
 $warning:    $orange;
 
 // Buttons & inputs' radius
