--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -3,5 +3,5 @@
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
   <%= f.association :movie, prompt: "Select a movie", input_html: {data: { controller: "tom-select"}} %>
-  <%= f.submit 'Add bookmark', class: 'btn btn-primary' %>
+  <%= f.submit 'Add bookmark', class: 'btn btn-flat' %>
 <% end %>
